<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.DetailFragment">


    <ImageView
        android:id="@+id/countryImageImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:paddingTop="8dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/country_image" />

    <TextView
        android:id="@+id/countryNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="8dp"
        android:text="@string/country_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/capitalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="8dp"
        android:text="@string/capital_name"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/regionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="8dp"
        android:text="@string/region_name"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/currencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="8dp"
        android:text="@string/currency"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/moneyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="8dp"
        android:text="@string/money_name"
        android:textSize="18sp"
        android:textStyle="italic" />

</LinearLayout>